--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 	<body>
 
     <header>
-      <img src="img/toronto.jpg">
+      <img src="img/new-york.jpg">
     </header>
 
     <main>
-      <h1>Visit Toronto!</h1>
+      <h1>Visit New York!</h1>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat, sapien non lacinia consequat, massa justo dictum lorem, pharetra rutrum purus sapien eget nunc. Proin ullamcorper euismod ex semper condimentum. Curabitur mattis dapibus eros at fringilla. Curabitur quis tempus sem. Mauris orci arcu, ultricies nec velit non, eleifend sagittis nunc. Nam eget massa in magna commodo volutpat at nec felis. Pellentesque sit amet semper justo, molestie pulvinar nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque gravida rhoncus ligula nec ultrices. Vivamus sit amet porta nisi. Vivamus lectus eros, iaculis non tellus at, finibus hendrerit felis.
       </p>
       <h2>Awesome Sunsets</h2>
-      <p>
+      <p class="faded">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque placerat, sapien non lacinia consequat, massa justo dictum lorem, pharetra rutrum purus sapien eget nunc. Proin ullamcorper euismod ex semper condimentum. Curabitur mattis dapibus eros at fringilla. Curabitur quis tempus sem. Mauris orci arcu, ultricies nec velit non, eleifend sagittis nunc. Nam eget massa in magna commodo volutpat at nec felis. Pellentesque sit amet semper justo, molestie pulvinar nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque gravida rhoncus ligula nec ultrices. Vivamus sit amet porta nisi. Vivamus lectus eros, iaculis non tellus at, finibus hendrerit felis.
       </p>
       <h2>Lots to See</h2>
@@ -25,7 +25,7 @@
       </p>
     </main>
 
-    <footer>Copyright Bitmaker Labs</footer>
+    <footer>Copyright General Assembly</footer>
 
 	</body>
 </html>
